@@ -97,7 +97,8 @@ Current development version: 3.29-12 (2019-07-31)
 - 11: Find&Replace: Search result presentation strategy unified <2>
 - 11: Issue #729: Modified German button caption in element editor [K.-P. Reimers]2
 - 12: Issue #551: No version check mode hint in the wake of Windows installer <2>
-- 12: Bugfix #731: File copy failure on Linux made arr[z] files vanish [K.-P. R.]2 
+- 12: Bugfix #731: File copy failure on Linux made arr[z] files vanish [K.-P. R.]2
+- 12: Bugfix #732: Cloning groups could end up in shared (glued) positions <2>
 
 Version: 3.29 (2019-01-07)
 - 01: Bugfix #511: Cursor-down key was trapped by collapsed CASE and PARALLEL <2>
